--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,56 @@
 aiosqlite==0.21.0
 annotated-types==0.7.0
 anyio==4.11.0
+babel==2.17.0
+beautifulsoup4==4.14.2
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.0
+courlan==1.3.2
 cryptography==46.0.2
+dateparser==1.2.2
+distro==1.9.0
 fastapi==0.119.0
+greenlet==3.2.4
 h11==0.16.0
+htmldate==1.9.3
 httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
 idna==3.11
+jiter==0.11.0
+jusText==3.0.2
+langdetect==1.0.9
+lxml==5.4.0
+lxml_html_clean==0.4.3
 MarkupSafe==3.0.3
+openai==2.3.0
+playwright==1.55.0
 pycparser==2.23
 pydantic==2.12.1
 pydantic-settings==2.11.0
 pydantic_core==2.41.3
+pyee==13.0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-http-client==3.3.7
+pytz==2025.2
 PyYAML==6.0.3
+regex==2025.9.18
 requests==2.32.5
 sendgrid==6.12.5
+six==1.17.0
 sniffio==1.3.1
+soupsieve==2.8
 SQLAlchemy==2.0.44
 starlette==0.48.0
+tld==0.13.1
+tqdm==4.67.1
+trafilatura==2.0.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzlocal==5.3.1
 urllib3==2.5.0
 uvicorn==0.37.0
 uvloop==0.21.0
