--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,40 @@
-OPENAI_API_KEY=your-openai-key-here
-NEWS_API_KEY=your-newsapi-key-here
-SENDGRID_API_KEY=your-sendgrid-key-here
+# === External APIs ===
+
+OPENAI_API_KEY=YOUR_OPENAI_API_KEY
+NEWS_API_KEY=YOUR_NEWS_API_KEY
+SENDGRID_API_KEY=YOUR_SENDGRID_API_KEY
+
 APP_ENV=local
 USE_MOCK_FILINGS=true
+# OpenAI and usage guardrails
+OPENAI_DAILY_TOKEN_CAP=200000
+OPENAI_DAILY_USD_CAP=20.0
+OPENAI_MAX_ITEMS_PER_TICKER=6
+
+
+# === Tickers & pacing ===
+SCHEDULE_TICKERS=TCS,TATAMOTORS,HEROMOTOCO
+PREFETCH_CONCURRENCY=2
+STAGGER_BASE_MS=250
+STAGGER_JITTER_MS=250
+
+# === Retry policy ===
+RETRY_ATTEMPTS=3
+RETRY_BASE_MS=400
+RETRY_FACTOR=2.0
+RETRY_JITTER_MS=200
+
+# === Cron (IST) ===
+CRON_PREFETCH=0 7 * * *
+CRON_SUMMARIZE=30 7 * * *
+SUMMARY_DRY_RUN=true
+
+# === Email (SendGrid) ===
+EMAIL_PROVIDER=sendgrid
+EMAIL_FROM=ari@yourdomain.com
+# Optional default recipient for local testing:
+EMAIL_TO=yourname@example.com
+
+# === SQLite DB (created automatically) ===
+CACHE_DB=cache.db
+CACHE_TTL_DAYS=7
