feat: MVP Phase 1 completion

--- a/.env.example
+++ b/.env.example
@@ -1,39 +1,31 @@
-# === External APIs ===
-
-OPENAI_API_KEY=YOUR_OPENAI_API_KEY
-NEWS_API_KEY=YOUR_NEWS_API_KEY
-SENDGRID_API_KEY=YOUR_SENDGRID_API_KEY
-
-APP_ENV=local
-# OpenAI and usage guardrails
-OPENAI_DAILY_TOKEN_CAP=200000
-OPENAI_DAILY_USD_CAP=20.0
-OPENAI_MAX_ITEMS_PER_TICKER=6
-
-
-# === Tickers & pacing ===
+# === Core ===
+SQLITE_PATH=./ari.db                      # SQLite DB file
 SCHEDULE_TICKERS=TCS,TATAMOTORS,HEROMOTOCO
-PREFETCH_CONCURRENCY=2
-STAGGER_BASE_MS=250
-STAGGER_JITTER_MS=250
 
-# === Retry policy ===
-RETRY_ATTEMPTS=3
-RETRY_BASE_MS=400
-RETRY_FACTOR=2.0
-RETRY_JITTER_MS=200
+# === OpenAI ===
+OPENAI_API_KEY=sk-xxxx                    # Required for summarization
 
-# === Cron (IST) ===
-CRON_PREFETCH=0 7 * * *
-CRON_SUMMARIZE=30 7 * * *
-SUMMARY_DRY_RUN=true
+# === News providers (enable any you have keys for) ===
+NEWS_PROVIDER_ORDER=newscatcher,bing,newsapi  # Comma order; code tries in sequence
+
+# Newscatcher (recommended for finance + filters)
+NEWSCATCHER_API_KEY=nc_xxxx               # Optional; leave blank to skip
+
+# Bing News Search (good precision top-up)
+BING_NEWS_KEY=xxxxxxxxxxxxxxxxxxxxxxxx    # Optional; leave blank to skip
+BING_NEWS_ENDPOINT=https://api.bing.microsoft.com/v7.0/news/search
+
+# NewsAPI (baseline; you already use)
+NEWS_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxx     # Optional; leave blank to skip
+
+# === Scheduler (IST) ===
+CRON_PREFETCH=0 6 * * *                   # 06:00 IST fetch/cache
+CRON_SUMMARIZE=30 6 * * *                 # 06:30 IST summarize
+CRON_PURGE=0 3 * * *                      # 03:00 IST TTL purge
+SUMMARY_DRY_RUN=true                      # true = don't hit OpenAI on schedules
 
 # === Email (SendGrid) ===
-EMAIL_PROVIDER=sendgrid
-EMAIL_FROM=ari@yourdomain.com
-# Optional default recipient for local testing:
-EMAIL_TO=yourname@example.com
-
-# === SQLite DB (created automatically) ===
-CACHE_DB=cache.db
-CACHE_TTL_DAYS=7
+EMAIL_PROVIDER=sendgrid                   # sendgrid|smtp
+SENDGRID_API_KEY=SG.xxxxx                 # Required if provider=sendgrid
+EMAIL_FROM=ari@example.com
+EMAIL_TO=you@example.com
