--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,80 @@
-fastapi>=0.115,<0.116
-uvicorn[standard]>=0.30,<0.31
-httpx>=0.27,<0.28
-python-dotenv>=1.0,<2.0
-aiosqlite>=0.19,<0.20
-apscheduler>=3.10,<3.11
-sendgrid>=6.11,<6.12
+aiosmtplib==5.0.0
+aiosqlite==0.19.0
+annotated-types==0.7.0
+anyio==4.11.0
+APScheduler==3.10.4
+babel==2.17.0
+beautifulsoup4==4.14.2
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.0
+colorama==0.4.6
+courlan==1.3.2
+cryptography==46.0.2
+dateparser==1.2.2
+distro==1.9.0
+dnspython==2.8.0
+email-validator==2.3.0
+fastapi==0.115.14
+filelock==3.20.0
+greenlet==3.2.4
+h11==0.16.0
+htmldate==1.9.3
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.27.2
+idna==3.11
+iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.11.0
+jusText==3.0.2
 langdetect==1.0.9
-trafilatura>=1.9,<2.0
-beautifulsoup4>=4.12,<5.0
-lxml>=5.2,<6.0
-tldextract>=5.1.2
+lxml==5.4.0
+lxml_html_clean==0.4.3
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+openai==2.3.0
+packaging==25.0
+playwright==1.55.0
+pluggy==1.6.0
+pycparser==2.23
+pydantic==2.12.1
+pydantic-settings==2.11.0
+pydantic_core==2.41.3
+pyee==13.0.0
+Pygments==2.19.2
+pytest==8.4.2
+pytest-asyncio==1.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-http-client==3.3.7
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.3
+regex==2025.9.18
+requests==2.32.5
+requests-file==3.0.0
+rich==14.2.0
+sendgrid==6.11.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.8
+SQLAlchemy==2.0.44
+starkbank-ecdsa==2.2.0
+starlette==0.46.2
+tld==0.13.1
+tldextract==5.3.0
+tqdm==4.67.1
+trafilatura==1.12.2
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzlocal==5.3.1
+urllib3==2.5.0
+uvicorn==0.30.6
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
+Werkzeug==3.1.3
