--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiosqlite==0.19.0
 annotated-types==0.7.0
 anyio==4.11.0
 APScheduler==3.10.4
+asyncpg==0.30.0
 babel==2.17.0
 beautifulsoup4==4.14.2
 certifi==2025.10.5
